--- a/customers/templates/customers/customer_form.html
+++ b/customers/templates/customers/customer_form.html
@@ -348,7 +348,7 @@
                                 <i class="fas fa-eye me-1"></i>
                                 عرض بيانات العميل
                             </a>
-                            <a href="{% url 'orders:wizard_start' %}?customer_id={{ existing_customer.pk }}" class="btn btn-success btn-sm">
+                            <a href="{% url 'orders:wizard_start_new' %}?customer_id={{ existing_customer.pk }}" class="btn btn-success btn-sm">
                                 <i class="fas fa-magic me-1"></i>
                                 إنشاء طلب إلكتروني
                             </a>
