--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -17,7 +17,7 @@
                     <i class="fas fa-magic"></i> تعديل الطلب (ويزارد)
                 </a>
             {% else %}
-                <a href="{% url 'orders:order_update' order.pk %}" class="btn btn-primary">
+                <a href="{% url 'orders:wizard_edit_options' order_pk=order.pk %}" class="btn btn-primary">
                     <i class="fas fa-edit"></i> تعديل الطلب
                 </a>
             {% endif %}
